api for get latest readings, and  for inserting new readings

--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-gauge-component": "^1.2.6"
+    "react-gauge-component": "^1.2.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
