--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.24.1",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-gauge-component": "^1.2.6",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.4.4",
-    "@mui/x-date-pickers": "^7.24.1"
+    "react-gauge-component": "^1.2.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
