--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.4",
     "@mui/x-date-pickers": "^7.24.1",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
