--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-gauge-component": "^1.2.6"
+    "react-gauge-component": "^1.2.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
